--- a/styles/mainStyling.css
+++ b/styles/mainStyling.css
@@ -72,7 +72,7 @@ input{
 #addBtn{
     border: none;
     outline: none;
-    padding: 16px 50px;
+    padding: 16px;
     background: #ff5945;
     color: #fff;
     font-size: 16px;
